--- a/etiquetas_kotlin/app/src/main/res/values/strings.xml
+++ b/etiquetas_kotlin/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="nav_contacts">Contactos</string>
-    <string name="nav_salir">Cerrar Session</string>
+    <string name="nav_contacts">Contacts</string>
+    <string name="nav_salir">Close Session</string>
 
     <!--  Login -->
 
@@ -30,14 +30,24 @@
     <string name="btn_login">Login</string>
     <string name="btn_call">Call</string>
     <string name="btn_send">Send email</string>
+    <string name="btn_edit">Edit</string>
+    <string name="btn_delete">Delete</string>
 
 
-    <!--  MENU -->
+    <!--  Menu -->
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_contactos">Contacts</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <!--  Etiqueta -->
+    <string name="tag_operator_name">Operator name</string>
+    <string name="tag_production_line">Production line</string>
+    <string name="tag_description">Description</string>
+    <string name="tag_emission_date">Emission date</string>
+    <string name="tag_close_date">Close date</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
