--- a/etiquetas_kotlin/app/src/main/res/values/strings.xml
+++ b/etiquetas_kotlin/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- General -->
     <string name="app_name">Proyecto</string>
     <string name="title_activity_principal">ActivityPrincipal</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -8,46 +9,42 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="nav_contacts">Contacts</string>
-    <string name="nav_salir">Close Session</string>
+    <string name="nav_salir">Close session</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!--  Login -->
-
+    <!-- Login -->
     <string name="ID">ID:</string>
     <string name="ID_hint">Enter your ID</string>
     <string name="Password">Password:</string>
     <string name="Password_hint">Enter your password</string>
 
-    <!--  Contacto -->
+    <!-- Contacto -->
+    <string name="Contacto">Contact:</string>
+    <string name="Contacto_send_mail">Send email</string>
+    <string name="Contacto_no_app">No apps where found to send the email</string>
 
-    <string name="Contacto">Contacts:</string>
-    <string name="Contacto_send_mail">Send email </string>
-    <string name="Contacto_no_app">No apps where founded to send email </string>
-
-
-    <!--  Botones -->
-
+    <!-- Botones -->
     <string name="btn_register">Register</string>
     <string name="btn_login">Login</string>
     <string name="btn_call">Call</string>
     <string name="btn_send">Send email</string>
     <string name="btn_edit">Edit</string>
     <string name="btn_delete">Delete</string>
+    <string name="btn_close_session">Close session</string>
 
-
-    <!--  Menu -->
-
+    <!-- Menu -->
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
-    <string name="menu_contactos">Contacts</string>
+    <string name="menu_contactos">Contact</string>
     <string name="menu_slideshow">Slideshow</string>
 
-    <!--  Etiqueta -->
+    <!-- Etiqueta -->
     <string name="tag_operator_name">Operator name</string>
     <string name="tag_production_line">Production line</string>
     <string name="tag_description">Description</string>
     <string name="tag_emission_date">Emission date</string>
     <string name="tag_close_date">Close date</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Close session -->
+    <string name="close_session_click">Click the button below to close the current session</string>
 </resources>
