--- a/etiquetas_kotlin/app/src/main/res/values/strings.xml
+++ b/etiquetas_kotlin/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <!-- General -->
-    <string name="app_name">Proyecto</string>
+    <string name="app_name">Project</string>
     <string name="title_activity_principal">ActivityPrincipal</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Etiquetas</string>
+    <string name="nav_header_subtitle">info@etiquetas.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="nav_contacts">Contacts</string>
