--- a/etiquetas_kotlin/app/src/main/res/values/strings.xml
+++ b/etiquetas_kotlin/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="btn_close_session">Close session</string>
     <string name="btn_add">Add</string>
     <string name="btn_find">Find</string>
+    <string name="btn_clean">Clean</string>
 
     <!-- Menu -->
     <string name="menu_home">Home</string>
@@ -59,6 +60,9 @@
     <string name="tag_close_date_hint">Write close date</string>
     <string name="TAG_add">Added information</string>
     <string name="TAG_fail">Fail</string>
+    <string name="TAG_remove">Information deleted</string>
+    <string name="TAG_Not">Not exist</string>
+
 
     <!-- Close session -->
     <string name="close_session_click">Click the button below to close the current session</string>
