--- a/etiquetas_kotlin/app/src/main/res/values/strings.xml
+++ b/etiquetas_kotlin/app/src/main/res/values/strings.xml
@@ -5,12 +5,13 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Tags</string>
-    <string name="nav_header_subtitle">info@etiquetas.com</string>
+    <string name="nav_header_subtitle">proyectofidelitas09@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="nav_contacts">Contacts</string>
     <string name="nav_salir">Close session</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email">proyectofidelitas09@gmail.com</string>
 
     <!-- Login -->
     <string name="ID">ID:</string>
@@ -26,17 +27,20 @@
     <string name="Name">Name</string>
     <string name="LastName">Last Name</string>
 
-    <!-- Contacto -->
-    <string name="Contacto">Contact:</string>
-    <string name="Contacto_label">Do you have any problems? Do you have any questions? Please let us know!</string>
-    <string name="Contacto_send_mail">Send email</string>
-    <string name="Contacto_no_app">No apps where found to send the email</string>
+    <!-- Contact -->
+    <string name="Contact_send_mail">Send email</string>
+    <string name="Contact">Contact:</string>
+    <string name="Contact_label">Do you have any problems? Do you have any questions? Please let us know!</string>
+    <string name="Contact_no_app">No apps where found to send the email</string>
+    <string name="Contact_number">88888888</string>
+    <string name="Contact_email_subject">Feedback</string>
+    <string name="Contact_email_message">Hello! I have feedback to report.</string>
 
-    <!-- Botones -->
+    <!-- Buttons -->
     <string name="btn_register">Register</string>
     <string name="btn_login">Login</string>
     <string name="btn_call">Call</string>
-    <string name="btn_send">Send email</string>
+    <string name="btn_send_email">Send email</string>
     <string name="btn_edit">Edit</string>
     <string name="btn_delete">Delete</string>
     <string name="btn_close_session">Close session</string>
@@ -55,7 +59,7 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tag">Tags</string>
 
-    <!-- Etiqueta -->
+    <!-- Tag -->
     <string name="tag_id">ID</string>
     <string name="tag_color">Color</string>
     <string name="tag_operator_name">Operator name</string>
@@ -74,6 +78,16 @@
     <string name="TAG_fail">Fail</string>
     <string name="TAG_remove">Information deleted</string>
     <string name="TAG_Not">Not exist</string>
+    <string-array name="TAG_spinner_options">
+        <item>Red (report a flaw)</item>
+        <item>Blue (quality assurance)</item>
+        <item>Green (improvement)</item>
+    </string-array>
+    <string-array name="tag_colors">
+        <item>Red</item>
+        <item>Blue</item>
+        <item>Green</item>
+    </string-array>
 
     <!--  Storage -->
     <string name="Storage_Image_name">Image name </string>
@@ -85,7 +99,6 @@
     <string name="Storage_upload_fail">Upload failed </string>
     <string name="Storage_download">Download successful </string>
     <string name="Storage_download_fail">Download failed </string>
-
 
     <!-- Close session -->
     <string name="close_session_click">Click the button below to close the current session</string>
