--- a/etiquetas_kotlin/app/src/main/res/values/strings.xml
+++ b/etiquetas_kotlin/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="menu_contact">Contact</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tag">Tags</string>
+    <string name="menu_list">Tag List</string>
 
     <!-- Tag -->
     <string name="tag_id">ID</string>
@@ -76,6 +77,7 @@
     <string name="tag_close_date_hint">Write close date</string>
     <string name="tag_add">Added information</string>
     <string name="tag_fail">Operation failed</string>
+    <string name="tag_success">Disconnecting</string>
     <string name="tag_remove">Information deleted</string>
     <string name="tag_not_found">Information not found</string>
     <string-array name="TAG_spinner_options">
