--- a/etiquetas_kotlin/app/src/main/res/values-es/strings.xml
+++ b/etiquetas_kotlin/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="nav_salir">Cerrar Session</string>
+    <string name="nav_close_session">Cerrar sesión</string>
     <string name="ID">ID</string>
     <string name="ID_hint">Ingrese su ID</string>
     <string name="Email_label">Correo</string>
@@ -10,18 +10,18 @@
     <string name="Password_hint">Ingrese su contraseña</string>
     <string name="Register">Registrar</string>
     <string name="Name">Nombre</string>
-    <string name="LastName">Apeellido</string>
+    <string name="LastName">Apellido</string>
     <string name="Contact_send_mail">Enviar correo</string>
     <string name="Contact">Contacto</string>
-    <string name="Contact_label">¿Tienes algun problema?¿Tienes alguna preguna? Dejano saber.</string>
+    <string name="Contact_label">¿Tienes algún problema?¿Tienes alguna preguna? Dejano saber.</string>
     <string name="Contact_no_app">No se encontro app para enviar email.</string>
     <string name="btn_register">Registro</string>
-    <string name="btn_login">Incio session</string>
+    <string name="btn_login">Incio sesión</string>
     <string name="btn_call">Llamar</string>
     <string name="btn_send_email">Enviar email</string>
     <string name="btn_edit">Editar</string>
     <string name="btn_delete">Eliminar</string>
-    <string name="btn_close_session">Cerrar sesion</string>
+    <string name="btn_close_session">Cerrar sesión</string>
     <string name="btn_add">Agregar</string>
     <string name="btn_find">Encontrar</string>
     <string name="btn_clean">Limpiar</string>
@@ -36,21 +36,21 @@
     <string name="tag_id">ID</string>
     <string name="tag_color">Color</string>
     <string name="tag_operator_name">Nombre del operario</string>
-    <string name="tag_production_line">Linea de Produccion</string>
-    <string name="tag_description">Descripcion</string>
-    <string name="tag_emission_date">Fecha de emision</string>
-    <string name="tag_close_date">Fecha de cierre.</string>
-    <string name="tag_id_hint">Escribir id de etiqueta</string>
+    <string name="tag_production_line">Línea de producción</string>
+    <string name="tag_description">Descripción</string>
+    <string name="tag_emission_date">Fecha de emisión</string>
+    <string name="tag_close_date">Fecha de cierre</string>
+    <string name="tag_id_hint">Escribir ID de etiqueta</string>
     <string name="tag_color_hint">Escribir color de etiqueta</string>
     <string name="tag_operator_name_hint">Escribir nombre del operario</string>
-    <string name="tag_production_line_hint">Escribir linea de produccion</string>
-    <string name="tag_description_hint">Escribir descripcion</string>
-    <string name="tag_emission_date_hint">Escribir fecha de emision</string>
+    <string name="tag_production_line_hint">Escribir línea de producción</string>
+    <string name="tag_description_hint">Escribir descripción</string>
+    <string name="tag_emission_date_hint">Escribir fecha de emisión</string>
     <string name="tag_close_date_hint">Escribir fecha de cierre</string>
-    <string name="tag_add">Agregar Informacion</string>
+    <string name="tag_add">Agregar información</string>
     <string name="tag_fail">Falla operativa</string>
-    <string name="tag_remove">Informacion eliminada</string>
-    <string name="tag_not_found">Informacion no encontrada</string>
+    <string name="tag_remove">Información eliminada</string>
+    <string name="tag_not_found">Información no encontrada</string>
     <string name="Storage_Image_name">Nombre de imagen</string>
     <string name="Storage_Image_name_hint">Escribir nombre de una imagen</string>
     <string name="Storage_Image_selection">Por favor seleccione una imagen</string>
@@ -60,15 +60,21 @@
     <string name="Storage_upload_fail">Carga fallida</string>
     <string name="Storage_download">Descarga exitosa</string>
     <string name="Storage_download_fail">Descarga fallida</string>
-    <string name="close_session_click">Presione el botón de abajo para cerrar session</string>
+    <string name="close_session_click">Presione el botón de abajo para cerrar sesión</string>
     <string name="toast_email_sent">Correo enviado</string>
-    <string name="toast_wrong">Ocurrio algun error</string>
-    <string name="toast_login_successful">Iniccio de session exitoso</string>
+    <string name="toast_wrong">Ocurrió algún error</string>
+    <string name="toast_login_successful">Inicio de sesión exitoso</string>
     <string name="toast_log_out">Desconectando</string>
     <string name="welcome_App">Bienvenido al app</string>
-    <string name="Contact_number">888888888</string>
-    <string name="Contact_email_subject">Retroalimentacion</string>
-    <string name="Contact_email_message">Hola! Tengo un reporte.</string>
+    <string name="Contact_email_subject">Retroalimentación</string>
+    <string name="Contact_email_message">¡Hola! Tengo un reporte.</string>
     <string name="tag_success">Éxito</string>
     <string name="menu_list">Lista de etiquetas</string>
+    <string name="home_title">¡Bienvenido a la aplicación de manejo de etiquetas!</string>
+    <string name="home_paragraph">Tag Management App es una aplicación para la administración de fallos, control de calidad y mejoras.</string>
+    <string name="action_settings">Configuración</string>
+    <string name="navigation_drawer_open">Abrir cajón de navegación</string>
+    <string name="navigation_drawer_close">Cerrar cajón de navegación</string>
+    <string name="nav_header_desc">Cabecera de navegación</string>
+    <string name="nav_contacts">Contacto</string>
 </resources>
